--- a/src/components/GalleryItem/GalleryItem.css
+++ b/src/components/GalleryItem/GalleryItem.css
@@ -3,6 +3,7 @@
   flex-flow: column nowrap;
   width: 250px;
   height: 250px;
+  background-color: darkgray;
   border: 2px solid black;
   border-radius: 10px;
   align-items: center;
