--- a/src/components/GalleryItem/GalleryItem.css
+++ b/src/components/GalleryItem/GalleryItem.css
@@ -7,11 +7,13 @@
   border: 2px solid black;
   border-radius: 10px;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
+  contain: layout;
 }
 
 .gallery-card p {
   margin: 0px;
+  padding-top: 10px;
   text-align: center;
 }
 
@@ -26,4 +28,24 @@
   border: 1px solid grey;
   padding: 5px;
   font-size: 0.75em;
+}
+
+.likePara {
+  padding-bottom: 5px;
+}
+
+.delBtn {
+  position: absolute;
+  right: 3px;
+  top: 3px;
+  cursor: pointer;
+}
+
+.likeBtn {
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.likeIcon {
+  margin-left: 10px;
 }
